# auth_as_a_service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  skills-lock.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_add_personal_access_tokens.py
src/: main.py  models_registry.py
src/api/: deps.py
src/api/v1/: api.py  deps.py  metrics_router.py
src/api/v1/endpoints/: auth.py  fraud.py  tokens.py  users.py
src/auth/: dependencies.py  router.py  schemas.py  service.py
src/core/: config.py  metrics.py  redis.py  security.py
src/crud/: __init__.py  base.py  crud_login_attempt.py  crud_user.py  user.py
src/db/: session.py
src/fraud/: dependencies.py  models.py  router.py  service.py
src/ml/: fraud_detector.py  training.py
src/models/: __init__.py  login_attempt.py  personal_access_token.py  user.py
src/schemas/: __init__.py  auth.py  fraud.py  user.py
src/services/: auth_service.py  rate_limit_service.py
src/tokens/: dependencies.py  models.py  router.py  service.py
src/users/: dependencies.py  models.py  router.py  service.py
tests/: conftest.py  test_auth.py  test_improvements.py
